# glad-web

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
data/: phs_unique.json
data/db_data/: phs.txt  phs_unique.txt
data/visualization_data/: prep_data.py
end2end/: package-lock.json  package.json
frontend/: package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  auth.ts  constants.ts  notifications.js  toast.ts
frontend/src/lib/components/: GroupSelector.svelte  GroupSelectorList.svelte  IBDVisualization.svelte  Legend.svelte  MetadataFieldSelector.svelte  MetadataFieldSelectorList.svelte  (+5 more)
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 20250402190917_create_user_table.sql  20250402193022_create_cohort_table.sql  20250402193046_create_query_table.sql  20250402193046_create_request_table.sql  20250402193855_create_query_cohort_table.sql  20250402193855_create_request_cohort_table.sql  20250722093005_create_notifications_table.sql
src/: app.rs  database.rs  lib.rs  main.rs  setup.rs
src/api/: auth.rs  error.rs  explore.rs  find.rs  mod.rs  notifications.rs  publication.rs
src/auth/: api.rs  jwt.rs  middleware.rs  mod.rs  server.rs
src/components/: mod.rs  navitems.rs  query_preview.rs
src/models/: error.rs  mod.rs  notification.rs  pagination.rs  query.rs  user.rs
src/routes/: editor.rs  find.rs  home.rs  login.rs  mod.rs  profile.rs  query.rs  reset_password.rs  settings.rs  signup.rs
src/visualization/: cache.rs  ibd.rs  mod.rs  pca.rs
style/: input.css  main.scss
(+10 files in other folders)
