[package]
name = "glad-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
jsonwebtoken = { version = "9" }
regex = { version = "1" }
mail-send = { version = "0.5" }
argon2 = { version = "0.5" }
sprs = { version = "0.11" }
rayon = { version = "1.10" }
once_cell = { version = "1.21" }
csv = { version = "1.3" }
reqwest = { version = "0.12", features = ["json"] }

